// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlashMessage Component Beravior should be show 1`] = `
<mdsnackbar-stub
  mdactive="true"
  mdduration="4000"
  mdposition="center"
>
  <span>
    this is the message
  </span>
   
  <mdbutton-stub
    class="md-primary"
    md-persistent=""
    type="button"
  >
    Close
  </mdbutton-stub>
</mdsnackbar-stub>
`;

exports[`FlashMessage Component Render default 1`] = `
<mdsnackbar-stub
  mdduration="4000"
  mdposition="center"
>
  <span>
    
  </span>
   
  <mdbutton-stub
    class="md-primary"
    md-persistent=""
    type="button"
  >
    Close
  </mdbutton-stub>
</mdsnackbar-stub>
`;
